Website: fixing InfoWindow scrollbar for chrome, fix new poi icon for chrome

--- a/WebApp/tourguide/src/app/components/view-pois/view-pois.component.scss
+++ b/WebApp/tourguide/src/app/components/view-pois/view-pois.component.scss
@@ -25,8 +25,9 @@
   right: 10%;
   bottom: 10%;
   box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-  display: flex;
-  flex-direction: column;
+  mat-icon {
+    font-size: 2em !important;
+  }
 }
 
 #card-poi {
@@ -58,7 +59,12 @@ mat-icon {
 
 ::ng-deep .gm-style .gm-style-iw-c {
   background-color: #303030;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
 }
+
 ::ng-deep .tooltip-red {
   background: #f44336;
 }
